--- a/base.html
+++ b/base.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MoneyTrust-Home</title>
+	<title>MoneyTrust</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
  
+
  <!-- header start -->
  <header class="header">
  	<div class="container">
