--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>this is index Page</h1>
     <h1>This is rameshwar testing</h1>
     <H2>tHIS IS RAMESHWAR FROM TAKALI </H2>
+    <H2>tHIS IS RAMESHWAR FROM TAKALI </H2>
 </body>
 <script>
     $("#footer").load("base.html"); 
