--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>MoneyTrust</title>
 </head>
 <body>
-    
+    <h1>this is index Page</h1>
+    <h1>This is rameshwar testing</h1>
+    <H2>tHIS IS RAMESHWAR FROM TAKALI </H2>
 </body>
 <script>
     $("#footer").load("base.html"); 
