--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  			<div class="header-item item-left">
  				<div class="logo">
  					<a href="#">
-						<img src="img/logo.jpg" alt="" style="height: auto; width:100%;">
+						<img src="img/logo.jpg" alt="">
 					</a>
  				</div>
  			</div>
