--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
  			<div class="header-item item-left">
  				<div class="logo">
  					<a href="#">
-						<img src="img/logo.jpg" alt="">
+						<!-- <img src="img/logo.jpg" alt=""> -->
+						<h3>MoneyTrust</h3>
 					</a>
  				</div>
  			</div>
@@ -37,13 +38,13 @@
  							<a href="#">Personal Loan <i class="fa fa-angle-down"></i></a>
  							<div class="sub-menu mega-menu mega-menu-column-4">
                                <div class="list-item">
-                               	  <h4 class="title">Link Optios</h4>
+                               	  <h4 class="title">Personal Loan Optios</h4>
                                	  <ul>
-                               	  	 <li><a href="#">Links List 1</a></li>
-                               	  	 <li><a href="#">Links List</a></li>
-                               	  	 <li><a href="#">Links List</a></li>
-                               	  	 <li><a href="#">Links List</a></li>
-                               	  	 <li><a href="#">Links List</a></li>
+                               	  	 <li><a href="templates/personal_loan/personal_loan_overview.html">Overview</a></li>
+                               	  	 <li><a href="templates/personal_loan/personal_loan_egibility_criteria.html">Eligibility Criteria</a></li>
+                               	  	 <li><a href="templates/personal_loan/personal_loan_emi_calculator.html">EMI Calculator</a></li>
+                               	  	 <li><a href="#">Interest rate & Processing Fees</a></li>
+                               	  	 <li><a href="#">Document Required</a></li>
                                	  </ul>
                                	  <h4 class="title">Links Options 2</h4>
                                	  <ul>
