--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                         <div class="blog-img position-relative overflow-hidden">
                             <img class="img-fluid" src="img/blog-1.jpg" alt="">
                             <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4"
-                                href="">Web Design</a>
+                                href="">title</a>
                         </div>
                         <div class="p-4">
                             <div class="d-flex mb-3">
@@ -674,7 +674,7 @@
                         <div class="blog-img position-relative overflow-hidden">
                             <img class="img-fluid" src="img/blog-2.jpg" alt="">
                             <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4"
-                                href="">Web Design</a>
+                                href="">title</a>
                         </div>
                         <div class="p-4">
                             <div class="d-flex mb-3">
@@ -692,7 +692,7 @@
                         <div class="blog-img position-relative overflow-hidden">
                             <img class="img-fluid" src="img/blog-3.jpg" alt="">
                             <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4"
-                                href="">Web Design</a>
+                                href="">title</a>
                         </div>
                         <div class="p-4">
                             <div class="d-flex mb-3">
