Add Link JQuery

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
-
     <!-- animation link -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
 
+    <!-- Jquery for adding header and footer -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"> </script>
+   
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -49,8 +51,6 @@
 </script>
 <body>
     <div id="header"></div>
-
-
 
 <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5" data-aos="fade-down" data-aos-delay="100" data-aos-duration="1500">
