add header and footer to the overview

--- a/header.html
+++ b/header.html
@@ -31,13 +31,9 @@
                                 <div class="list-item">
                                     <h4 class="title">Personal Loan Optios</h4>
                                     <ul>
-                                        <li><a
-                                                href="templates/personal_loan/personal_loan_overview.html">Overview</a>
-                                        </li>
-                                        <li><a href="templates/personal_loan/personal_loan_egibility_criteria.html">Eligibility
-                                                Criteria</a></li>
-                                        <li><a href="templates/personal_loan/personal_loan_emi_calculator.html">EMI
-                                                Calculator</a></li>
+                                        <li><a href="templates/personal_loan_overview.html">Overview</a> </li>
+                                        <li><a href="templates/personal_loan_egibility_criteria.html">Eligibility Criteria</a></li>
+                                        <li><a href="templates/personal_loan_emi_calculator.html">EMI Calculator</a></li>
                                         <li><a href="#">Interest rate & Processing Fees</a></li>
                                         <li><a href="#">Document Required</a></li>
                                     </ul>
