--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet"> -->
 
+    
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+
     <!-- animation link -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
@@ -507,6 +517,7 @@
 
 
 
+
     <div id="footer"></div>
 
 
@@ -515,13 +526,6 @@
             class="bi bi-arrow-up"></i></a>
 
 
-
-    <script>
-        var preloader = document.getElementById("loading");
-        function myFunction() {
-            preloader.style.display = 'none';
-        };
-    </script>
 
 
     <script>
@@ -678,18 +682,24 @@
     </script>
 
 
-    <!-- JavaScript Libraries -->
-    <!-- <script type="text/javascript" src="js/owl-carousel/owl.carousel.js"></script> -->
-    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
-    <!-- <script src="lib/owlcarousel/owl.carousel.min.js"></script> -->
-    <!-- <script src="lib/tempusdominus/js/moment.min.js"></script> -->
-    <!-- <script src="lib/wow/wow.min.js"></script> -->
-    <!-- <script src="lib/waypoints/waypoints.min.js"></script> -->
-    <!-- <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-    <script src="lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
+<script>
+    var preloader = document.getElementById("loading");
+    function myFunction() {
+        preloader.style.display = 'none';
+    };
+</script>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- <script src="js/script.js"></script> -->
 </body>
