--- a/index copy.html
+++ b/index copy.html
@@ -17,7 +17,7 @@
         rel="stylesheet"> -->
 
     <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"> -->
     <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
 
@@ -32,14 +32,14 @@
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet"> -->
 
-
-    <!-- Vendor CSS Files -->
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
 
     <!-- animation link -->
@@ -47,8 +47,7 @@
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
 
     <!-- Jquery for adding header and footer -->
-    <script src="https://code.jquery.com/jquery-3.3.1.js"
-        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"> </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"> </script>
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -59,7 +58,6 @@
     $(function () {
         $("#header").load("./header.html");
         $("#footer").load("./footer.html");
-        $("#personal-loan-section").load("./calculator_sections/personal_loan.html");
     });
 </script>
 
@@ -155,7 +153,127 @@
                     <div class="col-sm-2"></div>
                 </div>
 
-                <div id="personal-loan-section"></div>
+
+
+                <!-- Personal Loan section -->
+                <div class="row">
+                    <div class="col-sm-1">
+                    </div>
+                    <div class="col-sm-3 " data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1500">
+                        <div class="loan-card">
+                            <br>
+                            <i class="fa fa-user"></i>
+                            <br>
+                            <h4>Personal Loan</h2>
+                                <br>
+                                <p style="text-align: justify; margin: 5px;">A Home loan is a secured loan product
+                                    principally availed to finance a purchase/construction of a residential or
+                                    commercial property.</p>
+                                <br>
+
+                                <li style="text-align: left;">The Home Loan is taken against the property/security to be
+                                    bought.</li>
+                                <li style="text-align: left;">The borrower can receive loan amount up to 85-90% of
+                                    property value.</li>
+                                <li style="text-align: left;">The loan is payable in the form of EMIs spread over a
+                                    longer tenure.</li>
+                        </div>
+                    </div>
+
+
+                    <div class="col-sm-8" data-aos="zoom-in" data-aos-delay="200" data-aos-duration="1500"
+                        id="loan-calculator">
+                        <div class="loan-calculator">
+                            <h4 id="personal_loan_title">Calculate your EMI for Personal Loan</h4>
+                            <h4 id="home_loan_title" style="display: none;">Calculate your EMI for Home Loan</h4>
+                            <h4 id="business_loan_title" style="display: none;">Calculate your EMI for Business Loan
+                            </h4>
+                            <h4 id="gold_loan_title" style="display: none;">Calculate your EMI for gold Loan</h4>
+                            <br>
+
+                            <div class="slidecontainer text-left" style="margin-bottom: 25px;" id="">
+                                Loan Amount
+                                <input type="range" min="1000" max="30000" value="50" class="slider"
+                                    id="range-loan-amount" step="500">
+                                <p style="display: none;">Value: <span id="lbl-loan-amount"></span></p>
+                                <input type="text" id="txt-loan-amount" class="form-control"
+                                    placeholder="Enter amount from 1,00,000 to 10,00,00,000"
+                                    onchange="calculation_text_input()">
+                            </div>
+
+                            <div class="row" id="">
+                                <div class="col-sm-6">
+                                    <div class="slidecontainer text-left" style="margin-bottom: 5px;">
+                                        Rate of Interest
+                                        <input type="range" min="2" max="15" value="5" class="slider"
+                                            id="range-rate-of-interest">
+                                        <p style="display: none;">Value: <span id="lbl-rate-of-interest"></span></p>
+                                        <input type="text" id="txt-rate-of-interest" class="form-control" value="5"
+                                            onchange="calculation_text_input()">
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="slidecontainer text-left">
+                                        Loan Duration (year)
+                                        <input type="range" min="1" max="30" value="5" class="slider"
+                                            id="range-loan-tenure">
+                                        <p style="display: none;">Value: <span id="lbl-loan-tenure"></span></p>
+                                        <input type="text" id="txt-loan-tenure" class="form-control" value="5"
+                                            onchange="calculation_text_input()">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <center>
+                            <div class="row alert alert-primary mt-4" style="width: 99%;" id="calculator_output">
+                                <div class="col-sm-4">
+                                    <p style="font-size: 15px;">Monthly EMI</p>
+                                    <span id="lbl-monthly-emi"
+                                        style="font-size: 25px; font-weight: 1000;"><b>000</b></span>
+                                </div>
+                                <div class="col-sm-4">
+                                    <p style="font-size: 15px;">Total Interest Payable</p>
+                                    <span id="lbl-total-interest-payable"
+                                        style="font-size: 25px; font-weight: 1000;"><b>000</b></span>
+                                </div>
+                                <div class="col-sm-4">
+                                    <p style="font-size: 15px;">TOTAL AMOUNT PAYABLE</p>
+                                    <span id="lbl-total-amount-payable"
+                                        style="font-size: 25px; font-weight: 1000;"><b>000</b></span>
+                                </div>
+                            </div>
+                        </center>
+                    </div>
+                </div>
+
+
+
+
+                <div class="row text-center" id="business-loan-section" style="display: none;">
+                    <div class="col-sm-12 mt-2 text-center">
+                        <center>
+                            <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">We are update soon business
+                                loan section</h1>
+                        </center>
+                    </div>
+                </div>
+
+                <div class="row text-center" id="gold-loan-section" style="display: none;">
+                    <div class="col-sm-12 mt-2 text-center">
+                        <center>
+                            <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">We are update soon gold loan
+                                section</h1>
+                        </center>
+                    </div>
+                </div>
+
+                <div class="row text-center" id="exception-section" style="display: none;">
+                    <div class="col-sm-12 mt-2 text-center">
+                        <center>
+                            <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">We are update soon...</h1>
+                        </center>
+                    </div>
+                </div>
 
 
             </div>
@@ -564,24 +682,24 @@
     </script>
 
 
-    <script>
-        var preloader = document.getElementById("loading");
-        function myFunction() {
-            preloader.style.display = 'none';
-        };
-    </script>
+<script>
+    var preloader = document.getElementById("loading");
+    function myFunction() {
+        preloader.style.display = 'none';
+    };
+</script>
 
-    <!-- Vendor JS Files -->
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
 
-
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- <script src="js/script.js"></script> -->
 </body>
