--- a/calculator_sections/home_loan.html
+++ b/calculator_sections/home_loan.html
@@ -8,7 +8,7 @@
                             <br>
                             <i class="fa fa-user"></i>
                             <br>
-                            <h4>Personal Loan</h2>
+                            <h4>Home Loan</h2>
                                 <br>
                                 <p style="text-align: justify; margin: 5px;">A Home loan is a secured loan product
                                     principally availed to finance a purchase/construction of a residential or
@@ -28,7 +28,7 @@
                     <div class="col-sm-8" data-aos="zoom-in" data-aos-delay="200" data-aos-duration="1500"
                         id="loan-calculator">
                         <div class="loan-calculator">
-                            <h4 id="personal_loan_title">Calculate your EMI for Personal Loan</h4>
+                            <h4 id="personal_loan_title">Calculate your EMI for Home Loan</h4>
                             <br>
 
                             <div class="slidecontainer text-left" style="margin-bottom: 25px;" id="">
