--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         $("#header").load("./header.html");
         $("#footer").load("./footer.html");
         $("#personal-loan-section").load("./calculator_sections/personal_loan.html");
+        $("#personal-loan-section").load("./calculator_sections/home_loan.html");
     });
 </script>
 
@@ -155,8 +156,8 @@
                     <div class="col-sm-2"></div>
                 </div>
 
-                <div id="personal-loan-section"></div>
-                <div id="home-loan-section"></div>
+                <div id="personal-loan-section" style="display: none;"></div>
+                <div id="home-loan-section" style="display: none;"></div>
 
 
             </div>
