--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         $("#header").load("./header.html");
         $("#footer").load("./footer.html");
         $("#personal-loan-section").load("./calculator_sections/personal_loan.html");
-        $("#personal-loan-section").load("./calculator_sections/home_loan.html");
+        $("#home-loan-section").load("./calculator_sections/home_loan.html");
     });
 </script>
 
