--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     $(function () {
         $("#header").load("./header.html");
         $("#footer").load("./footer.html");
-        $("#personal-loan-section").load("./calculator_sections/personal_loan.html");
+        // $("#personal-loan-section").load("./calculator_sections/personal_loan.html");
         $("#home-loan-section").load("./calculator_sections/home_loan.html");
     });
 </script>
@@ -156,7 +156,7 @@
                     <div class="col-sm-2"></div>
                 </div>
 
-                <div id="personal-loan-section" style="display: none;"></div>
+                <!-- <div id="personal-loan-section" style="display: none;"></div> -->
                 <div id="home-loan-section" style="display: none;"></div>
 
 
