--- a/index.html
+++ b/index.html
@@ -463,10 +463,11 @@
                 alert("this is sample test")
             }
             else if (output === "home_loan") {
+                alert("this is sample test")
                 document.getElementById('personal-loan-section').style.display = 'none';
                 document.getElementById('home-loan-section').style.display = 'flex';
-                alert("this is sample test")
             }
+            alert('Direct Call')
         }
     </script>
 
