--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@
     $(function () {
         $("#header").load("./header.html");
         $("#footer").load("./footer.html");
-        // $("#personal-loan-section").load("./calculator_sections/personal_loan.html");
-        $("#home-loan-section").load("./calculator_sections/home_loan.html");
     });
 </script>
 
@@ -450,7 +448,6 @@
             <option value="Travel Insurace">Travel Insurace</option>
             `;
             }
-
         });
 
         function getOption_for_calculator() {
@@ -460,14 +457,15 @@
             if (output === "personal_loan") {
                 // document.getElementById('personal-loan-section').style.display = 'flex';
                 alert("Personal Loan Called")
-                document.getElementById('home-loan-section').style.display = 'none';
+                // document.getElementById('home-loan-section').style.display = 'none';
+                $("#personal-loan-section").load("./calculator_sections/personal_loan.html");
             }
             else if (output === "home_loan") {
                 alert("Home Loan Called")
                 // document.getElementById('personal-loan-section').style.display = 'none';
-                document.getElementById('home-loan-section').style.display = 'flex';
+                // document.getElementById('home-loan-section').style.display = 'flex';
+                 $("#home-loan-section").load("./calculator_sections/home_loan.html");
             }
-            alert('Direct Call')
         }
     </script>
 
